# conversation-analysis

./: README.md  convert_process  dev.ipynb  main.py  pyproject.toml
package/: mock_data.py
