[project]
name = "conversation-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "hmmlearn>=0.3.3",
    "pandas>=2.3.3",
    "pm4py>=2.7.19.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
